actualziacion al uso de lombok, subida de version de dependencias, uso de programacion funcional